tests/NormalTests/paczka2/big_fuzzy/52978637.err
Error in line 8: ofpIs5toD Sv48 16,5
Error in line 11: mfAk S248 2,
Error in line 12: ciyFZ A159 0,1
Error in line 5: mfA0k S248 13,6
Error in line 2: ZCjx4dJ6EB A691 32,3
Error in line 21: mfA0k S248 91,40
Error in line 19: mfA0k S473 99,3
Error in line 24: mfA0k S248 334,9
Error in line 34: A691 A691 157,9
Error in line 35: H7xx6IOaV A159 80,3
Error in line 42: ciyFZ A159 144,6
Error in line 49: mfA0k A691 51,1
Error in line 62: mfA0k S473 35,9
Error in line 69: ofpIs5toD A159 76,4
Error in line 72: ofpIs5toD S248 1,9
Error in line 81: mfA0k A691 22,6
Error in line 61: d0wloPG A159 161,7
Error in line 91: A691 S248 0,3
Error in line 92: A691 A159 46,2
Error in line 89: ofpIs5toD A159 71,4
Error in line 102: ciyFZ S473 27,5
Error in line 105: ciyFZ S248 32,5
Error in line 119: A691 S248 1,8
Error in line 132: d0wloPG A159 18,92
Error in line 113: ZCjx4dJ6EB A159 89,5
Error in line 128: ofpIs5toD A691 47,1
Error in line 155: ofpIs5toD A691 -1,7
Error in line 153: ZCjx4dJ6EB A691 49,7
Error in line 159: A691 S248 135,5
Error in line 164: H7xx6IOaV A691 83,5
Error in line 162: A691 A691 44,9
Error in line 169: H7xx6IOaV A159 67,3
Error in line 172: ZCjx4dJ6EB S248 83,5
Error in line 195: mfA0k S473 70,1
Error in line 207: A691 S248 49,3
Error in line 212: A691 A691 92,72
Error in line 211: mfA0k S248 29,7
Error in line 147: ofpIs5toD A691 8,7
Error in line 202: ZCjx4dJ6EB A159 42,8
Error in line 222: H7xx6IOaV S473 65,5
Error in line 233: H7xx6IOaV A691 5,7
Error in line 216: ofpIs5toD S248 4,0
Error in line 248: A691 A691 383,8
